fix file/vio_blk write bug, now program can write; add main_test_vio -correct file_write check for writing past end of file -correct file_write usage for ioctl(getpos)

--- a/src/kern/Makefile
+++ b/src/kern/Makefile
@@ -25,6 +25,7 @@ CORE_OBJS = \
 	ezheap.o \
 	uart.o \
 	kfs.o \
+	elf.o \
 	# Add the names of new objects here
 
 CORE_OBJS_NO_VIO = \
@@ -43,6 +44,7 @@ CORE_OBJS_NO_VIO = \
 	timer.o \
 	ezheap.o \
 	kfs.o \
+	elf.o \
 	# Add the names of new objects here
 
 CFLAGS = -Wall -fno-omit-frame-pointer -ggdb -gdwarf-2
@@ -65,9 +67,12 @@ QEMUGDB = $(shell if $(QEMU) -help | grep -q '^-gdb'; \
 	then echo "-gdb tcp::$(GDBPORT)"; \
 	else echo "-s -p $(GDBPORT)"; fi)
 
-all: shell.elf 
+all: shell.elf test_fs.elf vioblk.elf 
 
 shell.elf: $(CORE_OBJS) main_shell.o companion.o
+	$(LD) -T kernel.ld -o $@ $^
+
+vioblk.elf: $(CORE_OBJS) main_test_vio.o
 	$(LD) -T kernel.ld -o $@ $^
 
 test_fs.elf: $(CORE_OBJS_NO_VIO) main_tests.o companion.o
@@ -83,6 +88,9 @@ run-shell: shell.elf
 	$(QEMU) $(QEMUOPTS)
 
 debug-shell: shell.elf
+	$(QEMU) $(QEMUOPTS) -S $(QEMUGDB)
+
+debug-vioblk: vioblk.elf
 	$(QEMU) $(QEMUOPTS) -S $(QEMUGDB)
 
 # You might want to add more here
