mp3_cp3 file prepared

--- a/src/kern/Makefile
+++ b/src/kern/Makefile
@@ -19,20 +19,19 @@ CORE_OBJS = \
 	timer.o \
 	thread.o \
 	thrasm.o \
-	kfs.o \
 	ezheap.o \
 	io.o \
-	elf.o \
-	process.o \
 	device.o \
 	uart.o \
 	virtio.o \
 	vioblk.o \
-	console.o \
+	kfs.o \
+	elf.o \
+	console.o\
 	excp.o \
+	process.o \
 	memory.o \
-	syscall.o 
-	# Add more object files here
+	syscall.o \
 
 CFLAGS = -Wall -fno-omit-frame-pointer -ggdb -gdwarf-2
 CFLAGS += -mcmodel=medany -fno-pie -no-pie -march=rv64g -mabi=lp64d
@@ -45,8 +44,7 @@ QEMUOPTS += -machine virt -bios none -kernel $< -m 8M -nographic
 QEMUOPTS += -serial mon:stdio
 QEMUOPTS += -drive file=kfs.raw,id=blk0,if=none,format=raw
 QEMUOPTS += -device virtio-blk-device,drive=blk0
-QEMUOPTS += -serial pty
-QEMUOPTS += -monitor pty
+QEMUOPTS += -serial pty -serial pty # need a second screen for init5
 
 # try to generate a unique GDB port
 GDBPORT = $(shell expr `id -u` % 5000 + 25000)
