--- a/src/user/Makefile
+++ b/src/user/Makefile
@@ -12,18 +12,16 @@ OBJDUMP=$(TOOLPREFIX)objdump
 ULIB_OBJS = \
 	start.o \
 	string.o \
-	syscall.o
+	syscall.o \
+	stdlib.o \
 
 
 ALL_TARGETS = \
-	bin/trek \
-	bin/rule30 \
 	bin/init0 \
 	bin/init1 \
 	bin/init2 \
 	bin/init3 \
 	bin/init4 \
-	bin/init5 \
 	bin/init_trek_rule30 \
 	bin/init_fib_rule30 \
 	bin/init_fib_fib \
@@ -37,12 +35,6 @@ CFLAGS += -fno-asynchronous-unwind-tables
 CFLAGS += -I.
 
 all: $(ALL_TARGETS)
-
-bin/trek: $(ULIB_OBJS) trek.o
-	$(LD) -T user.ld -o $@ $^
-
-bin/rule30: $(ULIB_OBJS) rule30.o
-	$(LD) -T user.ld -o $@ $^
 	
 bin/troll: $(ULIB_OBJS) troll.o
 	$(LD) -T user.ld -o $@ $^
@@ -62,8 +54,8 @@ bin/init3: $(ULIB_OBJS) init3.o
 bin/init4: $(ULIB_OBJS) init4.o
 	$(LD) -T user.ld -o $@ $^
 
-bin/init5: $(ULIB_OBJS) init5.o
-	$(LD) -T user.ld -o $@ $^
+# bin/init5: $(ULIB_OBJS) init5.o
+# 	$(LD) -T user.ld -o $@ $^
 
 bin/fib: $(ULIB_OBJS) fib.o
 	$(LD) -T user.ld -o $@ $^
