--- a/src/kern/Makefile
+++ b/src/kern/Makefile
@@ -32,6 +32,7 @@ CORE_OBJS = \
 	process.o \
 	memory.o \
 	syscall.o \
+	pipe.o 
 
 CFLAGS = -Wall -fno-omit-frame-pointer -ggdb -gdwarf-2
 CFLAGS += -mcmodel=medany -fno-pie -no-pie -march=rv64g -mabi=lp64d
